# plot-styler

./: .gitignore  README.md  pyproject.toml
src/plot_styler/: __init__.py
src/plot_styler/styles/: edc-science.mplstyle
src/plot_styler/styles/journals/: sage.mplstyle
src/plot_styler/tests/: conftest.py  test_plot_styler.py
